force-app/main/default/objects/Doc_Hub_Link__c/Doc_Hub_Link__c.object-meta.xml
<CustomObject>
    <label>Doc Hub Link</label>
    <nameField>
        <displayFormat>DHL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Hub Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>