force-app/main/default/objects/Doc_Hub_Link__c/fields/Auto_Publish__c.field-meta.xml
<CustomField>
    <fullName>Auto_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Publish</label>
    <type>Checkbox</type>
</CustomField>