force-app/main/default/objects/Doc_Hub_Link__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>