force-app/main/default/objects/Doc_Hub_Link__c/fields/Linked_By__c.field-meta.xml
<CustomField>
    <fullName>Linked_By__c</fullName>
    <label>Linked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>