force-app/main/default/objects/Doc_Hub_Link__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin</valueSetName>
    </valueSet>
</CustomField>