force-app/main/default/objects/Doc_Hub_Link__c/fields/Origin_Id__c.field-meta.xml
<CustomField>
    <fullName>Origin_Id__c</fullName>
    <label>Origin Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>