force-app/main/default/objects/Doc_Hub_Link__c/fields/Prevent_Copying__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Copying__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent user from downloading, printing and copying file</description>
    <label>Prevent Copying</label>
    <type>Checkbox</type>
</CustomField>