force-app/main/default/objects/Doc_Hub_Link__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Linked&quot;), HYPERLINK(&quot;/apex/&quot; +  $Setup.NamespaceSetting__c.Prefix__c + &quot;DocumentViewPage?Id=&quot;&amp;Id, &quot;View&quot;, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>