force-app/main/default/objects/Doc_Hub_Link__c/listViews/Linked.listView-meta.xml
<ListView>
    <fullName>Linked</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>View__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Linked</value>
    </filters>
    <label>Linked</label>
</ListView>